[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["duckbot", "scripts"]

[project]
name = "duckbot"
version = "1.0"
description = "A Discord bot for personal friend group"
readme = "README.md"
requires-python = ">=3.10"
urls = { Homepage = "https://github.com/duck-dynasty/duckbot" }

dependencies = [
    "discord.py[voice]==2.6.3",
    "beautifulsoup4==4.13.5",
    "requests==2.32.5",
    "timezonefinder==8.0.0",
    "holidays==0.79",
    "pyowm==3.3.0",         # openweather
    "psycopg2==2.9.10",
    "SQLAlchemy==2.0.43",
    "d20==1.1.2",
    "nltk==3.9.1",
    "textblob==0.19.0",
    "pyfiglet==1.0.4",
    "matplotlib==3.10.6",
    "PyGithub==2.7.0",
    "wolframalpha==5.1.3",
    "yfinance==0.2.65",
    "mip==1.15.0",
    "anthropic==0.64.0",    # sdk for llm
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-xdist[psutil]==3.8.0",
    "flake8==7.3.0",
    "flake8-pyproject==1.2.3",
    "black==25.1.0",
    "flake8-black==0.3.6",
    "isort==6.0.1",
    "flake8-isort==6.1.2",
    "pep8-naming==0.15.1",
    "mdformat==0.7.22",
    "mdformat-gfm==0.4.1",
    "mdformat-black==0.1.1",
    "responses==0.25.8",
    "pytest-blockage==0.2.4",
    "pytest-sugar==1.1.1",
    "pytest-icdiff==0.9",
    "pytest-cov==6.2.1",
]

cdk = [
    "aws-cdk.core==1.204.0",
    "aws-cdk.aws-ec2==1.204.0",
    "aws-cdk.aws-ecs==1.204.0",
    "aws-cdk.aws-autoscaling==1.204.0",
    "aws-cdk.aws-efs==1.204.0",
    "aws-cdk.aws-iam==1.204.0",
    "aws-cdk.aws-logs==1.204.0",
    "aws-cdk.aws-ssm==1.204.0",
    "boto3==1.40.42",
]

[project.scripts]
format = "scripts.format:main"
setup_nltk = "scripts.setup_nltk:main"

[tool.black]
line-length = 200
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = """\
    -ra \
    -n auto --dist loadfile \
    --blockage"""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.flake8]
max-line-length = 200
max-complexity = 10
# ignore unused imports in __init__.py files
per-file-ignores = ["__init__.py:F401"]
