[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["duckbot", "scripts"]

[project]
name = "duckbot"
version = "1.0"
description = "A Discord bot for personal friend group"
readme = "README.md"
requires-python = ">=3.10"
urls = { Homepage = "https://github.com/duck-dynasty/duckbot" }

dependencies = [
    "discord.py[voice]==2.6.4",
    "beautifulsoup4==4.14.2",
    "requests==2.32.5",
    "timezonefinder==8.1.0",
    "holidays==0.83",
    "pyowm==3.3.0",         # openweather
    "psycopg2==2.9.11",
    "SQLAlchemy==2.0.44",
    "d20==1.1.2",
    "nltk==3.9.2",
    "textblob==0.19.0",
    "pyfiglet==1.0.4",
    "matplotlib==3.10.7",
    "PyGithub==2.8.1",
    "wolframalpha==5.1.3",
    "yfinance==0.2.66",
    "mip==1.15.0",
    "anthropic==0.72.0",    # sdk for llm
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-xdist[psutil]==3.8.0",
    "flake8==7.3.0",
    "flake8-pyproject==1.2.4",
    "black==25.9.0",
    "flake8-black==0.4.0",
    "isort==7.0.0",
    "flake8-isort==7.0.0",
    "pep8-naming==0.15.1",
    "mdformat==1.0.0",
    "mdformat-gfm==1.0.0",
    "mdformat-black==0.1.1",
    "responses==0.25.8",
    "pytest-blockage==0.2.4",
    "pytest-sugar==1.1.1",
    "pytest-icdiff==0.9",
    "pytest-cov==7.0.0",
]

cdk = [
    "aws-cdk.core==1.204.0",
    "aws-cdk.aws-ec2==1.204.0",
    "aws-cdk.aws-ecs==1.204.0",
    "aws-cdk.aws-autoscaling==1.204.0",
    "aws-cdk.aws-efs==1.204.0",
    "aws-cdk.aws-iam==1.204.0",
    "aws-cdk.aws-logs==1.204.0",
    "aws-cdk.aws-ssm==1.204.0",
    "boto3==1.40.64",
]

[project.scripts]
format = "scripts.format:main"
setup_nltk = "scripts.setup_nltk:main"

[tool.black]
line-length = 200
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = """\
    -ra \
    -n auto --dist loadfile \
    --blockage"""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.flake8]
max-line-length = 200
max-complexity = 10
# ignore unused imports in __init__.py files
per-file-ignores = ["__init__.py:F401"]
